Archive2/9f/4371a5513e7abf/output
main.cpp:10:1: error: extraneous 'template<>' in declaration of class 'Test'
template <>
^
main.cpp:11:7: error: redefinition of 'Test' as different kind of symbol
class Test {
      ^
main.cpp:8:7: note: previous definition is here
class Test {};
      ^
main.cpp:23:2: error: expected ';' after class
}
 ^
 ;
3 errors generated.
